# c-tac-toe

./: .gitignore  Makefile  README.md  build_extension.sh  buildinstalltest.sh  pyproject.toml  setup.py
src/: arrayList.cpp  arrayList.h  arrayList.hpp  arrayListModule.cpp  myCoolCArray.cpp  myCoolCArray.h  myCoolCArrayModule.cpp  myVec.cpp  myVec.h
src/module/: myVecModule.cpp  myVecModule.h
test/: test.py
tests/: test_array_list.py  test_my_cool_array.py  test_my_vec.py
tests/test_tac_toe/: test_ai.py  test_win_con.py
tests/test_tack_toe/: test_ai.py  test_win_con.py
tic_tac_toe/: main.py  tic_tac_toe.py
tic_tack_toe/: py_types.py  tic_tac_toe.py  util.py
